<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.InsertdataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/insertName"
            android:maxLines="@integer/maxLines1"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimens_30dp"
            android:layout_marginTop="@dimen/dimens_70dp"
            android:layout_marginEnd="@dimen/dimens_30dp"
            android:hint="@string/insertName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:maxLines="@integer/maxLines1"
            android:id="@+id/insertSurname"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimens_30dp"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:layout_marginEnd="@dimen/dimens_30dp"
            android:hint="@string/insertsurname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insertName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/insertCompanyname"
            android:maxLines="@integer/maxLines1"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimens_30dp"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:layout_marginEnd="@dimen/dimens_30dp"
            android:hint="@string/insertcompanyname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insertSurname" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/insertEmail"
            android:maxLines="@integer/maxLines1"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimens_30dp"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:layout_marginEnd="@dimen/dimens_30dp"
            android:hint="@string/insertemail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insertCompanyname" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/insertphonenumber"
            android:maxLines="@integer/maxLines1"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimens_30dp"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:layout_marginEnd="@dimen/dimens_30dp"
            android:inputType="number"
            android:hint="@string/insertphonenumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insertEmail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/inserdataBtn"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimens_30dp"
            android:layout_marginTop="@dimen/dimens_150dp"
            android:layout_marginEnd="@dimen/dimens_30dp"
            android:text="@string/insertdata"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insertphonenumber" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>